# InformaticaII

./: .gitignore
ChallengeI_Requirements/Caso 1/: M1.txt
ChallengeI_Requirements/Caso 2/: M0.txt
ChallengeI_Requirements/Code/: main.cpp
DecryptImage/: CMakeLists.txt  InformeAnalisisdelProblema.docx  README.md  bitwiseoperators.cpp  bitwiseoperators.h  decriptimage.cpp  decriptimage.h  main.cpp  tst_bitwiseoperators.cpp  tst_decryptimage.cpp
DecryptImage/tests/: tst_bitwiseoperators.cpp  tst_case1.cpp  tst_decryptimage.cpp
DecryptImage/tools/: provided_tools.h
DecryptImageChallenge/: CMakeLists.txt  provided_tools.h  tst_decryptimagechallengetest.cpp
DesafioI/: CMakeLists.txt  README.md  encriptacion.cpp  encriptacion.h  file_manager.cpp  file_manager.h  files.cpp  files.h  lz78.cpp  lz78.h  main.cpp  rle.cpp  rle.h  tools.cpp  tools.h
DesafioI/DesafioI20252/: CMakeLists.txt  README.md  tst_desafioitest.cpp
DesafioI/DesafioI20252/tests/: tst_desafio.cpp
DesafioI/DesafíoI/Caso 1/: M0.txt  M2.txt
DesafioI/DesafíoI/Code/: ProjectParams.pro
DesafioI/analisis/: pseudo_codigo_solucion.md
DesafioI/dataset/: README.txt
Lab1/: CMakeLists.txt
Lab1/src/: guia1.cpp  guia1.h  main.cpp  problems.cpp  problems.h
Lab1/tests/: test_guia1.cpp  test_problems.cpp
Lab2/CalculateReturnCashArduino/: CalculateReturnCashArduino.ino
Lab2/CinemaReservation/: CMakeLists.txt  main.cpp.txt  room.cpp  room.cpp.txt  room.h  room.h.txt  seat.cpp.txt  seat.h  tst_cinemareservation.cpp
Lab2/ConvertLowerCasetoUpperCase/: CMakeLists.txt  lowercase_to_uppercase.h.txt  tst_lowecasetouppercase.cpp
Lab2/ConvertLowerCasetoUpperCaseArduino/: ConvertLowerCasetoUpperCaseArduino.ino.txt
Lab2/MagixMatrix/: CMakeLists.txt  magicmatrix.cpp  magicmatrix.h.txt  main.cpp  tst_magicmatrixtests.cpp
Lab2/ReturnCashCalculatorQT/: CMakeLists.txt  main.cpp  return_cash_calculator.h
Lab2/untitled1/: CMakeLists.txt  main.cpp  tst_qwe.cpp  tst_test1.cpp
Lab3/BankSystem/: CMakeLists.txt  main.cpp  methods.h
Lab3/Guia/: CMakeLists.txt  main.cpp  tst_guiatests.cpp
Lab4/Network/: CMakeLists.txt  main.cpp  network.h  router.h
Lab5/Pacman/: CMakeLists.txt  mainwindow.ui
Projecto/: CMakeLists.txt
ProyectoFinal/: .~lock.CarreraLunar.odt#  CarreraLunar.odt
ProyectoFinal/MomentoII/: MomentoII.odt  diagrama_clases.mermaid  vista_nivel_1.txt  vista_nivel_2.txt  vista_nivel_3.txt
ProyectoFinal/MomentoII/ComponenteInteligente/: Comporamiento.odt  componente_inteligente.mermaid  componente_inteligente.txt  ejecucion.txt
RegistroRestaurante/: RegistroRestaurante.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  usuario.cpp  usuario.h
UdeAStay/: CMakeLists.txt  Diagrama sin título.drawio  UdeAStayUML.drawio  alojamiento.cpp  alojamiento.h  anfitrion.cpp  anfitrion.h  huesped.cpp  huesped.h  pago.cpp  pago.h  reserva.cpp  reserva.h  usuario.cpp  usuario.h
UdeAStay/app/: app.cpp  app.h  main.cpp
UdeAStay/db/: db.cpp  db.h  main.cpp
UdeAStay/tests/: alojamientosTest.csv  amenidadesTest.csv  huespedesTest.csv  pagosTest.csv  reservasTest.csv  tst_app.cpp  tst_db.cpp  tst_udeastay.cpp  usuariosTest.csv
UdeATune/: CMakeLists.txt  album.cpp  album.h  anuncio.cpp  anuncio.h  app.cpp  app.h  artista.cpp  artista.h  cancion.cpp  cancion.h  estructuras.h  favorito.cpp  favorito.h  login.cpp  login.h  main.cpp  storage.cpp  storage.h  udeatune.cpp  udeatune.h  usuario.cpp  usuario.h
UdeATune/analisis/: DesafioII.drawio  UdeATunes.org
UdeATune/data/: albumes.csv  artistas.csv  canciones.csv  creditos.csv  favoritos.csv  login.csv  publicidad.csv  seguidores_favoritos.csv  test.csv  usuarios.csv
UdeATune/estructuras_datos/: lista_dinamica.cpp  lista_dinamica.h
UdeATune/tests/: CMakeLists.txt  UdeATuneTests  tst_album.cpp  tst_anuncio.cpp  tst_artista.cpp  tst_dinamiclist.cpp  tst_login.cpp  tst_storage.cpp  tst_udeatune.cpp  tst_udeatunetests.cpp  tst_usuario.cpp
